All Onboard/objects/Document__mdt.object
<CustomObject>
    <description>Stores details of required/optional documents for an application</description>
    <fields>
        <fullName>Accepted_File_Format__c</fullName>
        <defaultValue>&quot;.pdf,.png,.jpg&quot;</defaultValue>
        <description>Comma-separated list of file extensions that can be uploaded in the format .ext, such as .pdf, .jpg, or .png</description>
        <inlineHelpText>Comma-separated list of file extensions that can be uploaded in the format .ext, such as .pdf, .jpg, or .png</inlineHelpText>
        <label>Accepted File Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Document_Category__mdt</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents_del</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Link__c</fullName>
        <description>The URL of the template file.</description>
        <inlineHelpText>The URL of the template for the specific flow document type.</inlineHelpText>
        <label>File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>The URL of the icon. The icon is displayed in the left hand side of the flow document name.</description>
        <inlineHelpText>The URL of the icon. The icon is displayed in the left hand side of the flow document name.</inlineHelpText>
        <label>Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this document is required to pass the document check.</description>
        <inlineHelpText>Indicates if this document is required to pass the document check.</inlineHelpText>
        <label>Is Mandatory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Points/Score for the flow document.</description>
        <inlineHelpText>Points/Score for the flow document.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flow Document</label>
    <pluralLabel>Flow Documents</pluralLabel>
</CustomObject>